# git-xtax

./: README.md  pyproject.toml
git_xtax/: __main__.py  annotation.py  bin.py  cli.py  code_hosting.py  constants.py  exceptions.py  git_operations.py  github.py  gitlab.py  stack_state.py  utils.py
tests/: test_cli.py  test_stack_state.py
